--- a/style.css
+++ b/style.css
@@ -14,5 +14,16 @@
   }
    
   .family {
-       padding: 10px;
+       padding: 20px;
+   }
+
+   #top-navbar {
+    position: fixed;
+    top: 0;
+    width: 100%;
+   }
+
+   #card-title {
+     text-align: center;
+     font-size: larger;
    }
