--- a/style.css
+++ b/style.css
@@ -37,21 +37,21 @@
   /* Create four equal columns that sits next to each other */
   .column {
     flex:50%;
-    max-width: 50%;
+    max-width: 100%;
     padding: 0 4px;
   }
   
   .column img {
     margin-top: 8px;
     vertical-align: middle;
-    width: 75%;
+    width: 100%;
   }
   
   /* Responsive layout - makes a two column-layout instead of four columns */
   @media screen and (max-width: 800px) {
     .column {
       flex: 50%;
-      max-width: 50%;
+      max-width: 100%;
     }
   }
   
@@ -63,93 +63,100 @@
     }
   }
 
-  * {
-    box-sizing: border-box;
-  }
-  
-  .slider {
-    width: 500px;
-    text-align: center;
-    overflow: hidden;
-  }
-  
-  .slides {
-    display: flex;
-    
-    overflow-x: auto;
-    scroll-snap-type: x mandatory;
-    
-    
-    
-    scroll-behavior: smooth;
-    -webkit-overflow-scrolling: touch;
-    
-    /*
-    scroll-snap-points-x: repeat(300px);
-    scroll-snap-type: mandatory;
-    */
-  }
-  .slides::-webkit-scrollbar {
-    width: 10px;
-    height: 10px;
-  }
-  .slides::-webkit-scrollbar-thumb {
-    background: black;
-    border-radius: 10px;
-  }
-  .slides::-webkit-scrollbar-track {
-    background: transparent;
-  }
-  .slides > div {
-    scroll-snap-align: start;
-    flex-shrink: 0;
-    width: 600px;
-    height: 300px;
-    margin-right: 50px;
-    border-radius: 10px;
-    background: #eee;
-    transform-origin: center center;
-    transform: scale(1);
-    transition: transform 0.5s;
-    position: relative;
-    
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 100px;
-  }
+ /*Slider CSS*/
 
-  .author-info {
-    background: rgba(0, 0, 0, 0.75);
-    color: white;
-    padding: 0.75rem;
-    text-align: center;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    margin: 0;
-  }
-  .author-info a {
-    color: white;
-  }
-  
-  .slider > a {
-    display: inline-flex;
-    width: 1.5rem;
-    height: 1.5rem;
-    background: white;
-    text-decoration: none;
-    align-items: center;
-    justify-content: center;
-    border-radius: 50%;
-    margin: 0 0 0.5rem 0;
-    position: relative;
-  }
-  .slider > a:active {
-    top: 1px;
-  }
-  .slider > a:focus {
-    background: #000;
-  }
-  
+* 
+{ 
+box-sizing: border-box; 
+} 
+body 
+{ 
+font-family: Verdana, sans-serif; 
+} 
+
+.image-sliderfade 
+{ 
+display: none; 
+} 
+
+/* img 
+{ 
+vertical-align: middle; 
+}  */
+
+/* Slideshow container */
+/* .container 
+{ 
+max-width: 1000px; 
+position: relative; 
+margin: auto; 
+}  */
+
+/* Caption text */
+.text 
+{ 
+color: #f2f2f2; 
+font-size: 15px; 
+padding: 20px 15px; 
+position: absolute; 
+right: 10px; 
+bottom: 10px; 
+width: 40%; 
+background: rgba(0, 0, 0, .7); 
+text-align: left; 
+} 
+
+/* The dots/bullets/indicators */
+.dot 
+{ 
+height: 15px; 
+width: 15px; 
+margin: 0 2px; 
+background-color: transparent; 
+border-color: #ddd; 
+border-width: 5 px; 
+border-style: solid; 
+border-radius: 50%; 
+display: inline-block; 
+transition: border-color 0.6s ease; 
+} 
+
+.active 
+{ 
+border-color: #666; 
+} 
+
+/* Animation */
+.fade 
+{ 
+-webkit-animation-name: fade-image; 
+-webkit-animation-duration: 1.5s; 
+animation-name: fade-image; 
+animation-duration: 1.5s; 
+} 
+
+@-webkit-keyframes fade-image 
+{ 
+from {opacity: .4} 
+to {opacity: 1} 
+} 
+
+@keyframes fade-image 
+{ 
+from {opacity: .4} 
+to {opacity: 1} 
+} 
+
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 300px) 
+{ 
+.text {font-size: 11px} 
+} 
+
+.slider-container {
+  justify-content: center;
+}
+
+/* #rt-showcase {
+  width: 500px;
+} */
